# figcrop

./: .gitignore  AGENTS.md  CLAUDE.md  CONNECTORS.md  MANIFEST.in  NOTICE  README.md  figcrop.py  figcrop_mcp.py  figtools.py  pyproject.toml  requirements-mcp.txt  requirements.txt  setup.ps1  setup.sh
