[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figcrop"
version = "0.1.1"
description = "High-quality figure extraction from dense research-paper PDFs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "TadaLab Keio" }
]
keywords = ["pdf", "figures", "research-papers", "layout-analysis", "openvino"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Text Processing :: General",
]
dependencies = [
  "mineru[core]>=2,<4",
  "openvino>=2025",
  "pymupdf>=1.24",
  "numpy",
  "pillow",
  "fastapi",
  "uvicorn",
  "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/tadalab-keio/figcrop"
Repository = "https://github.com/tadalab-keio/figcrop"
Issues = "https://github.com/tadalab-keio/figcrop/issues"

[project.scripts]
figcrop = "figtools:main"
figcrop-mcp = "figcrop_mcp:main"

[tool.setuptools]
py-modules = ["figtools", "figcrop_mcp"]
